feat: support single update subscription next payment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2026,15 +2026,15 @@ button.dark-theme-button i {
 }
 
 .theme-preview.blue .main-color {
-  background-color: #007bff;
+  background-color: #5096fa;
 }
 
 .theme-preview.blue .accent-color {
-  background-color: #8fbffa;
+  background-color: #ecebfa;
 }
 
 .theme-preview.blue .hover-color {
-  background-color: #0056b3;
+  background-color: #4187fa;
 }
 
 .theme-preview.green .main-color {
